# ZSPACE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Graph.json  Makefile
cpp/depends/Armadillo/: armadillo.lib
cpp/depends/modernJSON/: json.hpp
cpp/depends/quickhull/: quickhull.h
cpp/headers/zCore/base/: zColor.h  zDate.h  zDefinitions.h  zDomain.h  zInline.h  zMatrix.h  zQuaternion.h  zTransformationMatrix.h  zVector.h
cpp/headers/zCore/display/: zObjBuffer.h
cpp/headers/zCore/utilities/: zUtilsBMP.h  zUtilsCore.h  zUtilsPointerMethods.h
cpp/source/zApp/: zApp.cpp
cpp/source/zCore/base/: zColor.cpp  zDate.cpp
cpp/source/zCore/geometry/: zMesh.cpp
exampleExec/: main.cpp  structural.h
projects/CPP/zInterOp/: zInterOp.vcxproj
projects/CPP/zSpace_App/: zSpace_App.vcxproj
projects/CPP/zSpace_ArchGeom/: zSpace_ArchGeom.vcxproj
projects/CPP/zSpace_Core/: zCore.vcxproj
projects/CPP/zSpace_Housing/: zSpace_Housing.vcxproj
projects/CPP/zSpace_Interface/: zInterface.vcxproj
projects/CPP/zSpace_Toolsets/: zSpace_Toolsets.vcxproj
